# halite-collab-bot

./: .gitignore  CMakeLists.txt  HaliteBot.sln  MyBot.cpp  README.md  run.bat  test.cpp
benchmarks/: baseline.txt  benchmark.py  previous.txt
bot/: BotAlgo.h  Commander.cpp  Commander.h  Information.cpp  Information.h  assignment.cpp  assignment.h  bot.cpp  bot.h  commander.cpp  commander.h  constants.cpp  constants.h  defines.h  math.hpp  navigation.cpp  navigation.h  navigator.cpp  navigator.h  observer.cpp  observer.h  path.hpp  sorting.cpp  sorting.h  utils.cpp  utils.h
bot/commanders/: centred_commander.cpp  centred_commander.h  commander.cpp  commander.h  smart_commander.cpp  smart_commander.h
bot/commanders/behaviours/: attack_behaviour.h  base_bahaviours.hpp  defend_behaviour.h  discovery_behaviour.hpp
bot/navigation/: ca_algorithms.hpp  collision_avoidance.cpp  collision_avoidance.h  collision_avoidance.hpp  collision_checking.hpp  navigation_advanced.hpp  navigation_fast.hpp  navigation_fast_smart.hpp  navigation_smart.hpp  navigation_thorough.hpp  navigator.cpp  navigator.h
hlt/: collision.hpp  constants.hpp  entities.hpp  entity.hpp  hlt.hpp  hlt_in.cpp  hlt_in.hpp  location.cpp  location.hpp  map.hpp  move.hpp  navigation.hpp  ship.hpp  types.hpp  util.hpp  vector.cpp  vector.hpp
sandbox/: MyBot.exe.stackdump  clean.bat  run.bat  test.bat  versus.bat
scripts/: release.bat  zip_release.py
test/: plot_path.py
